[package]
name = "ruph"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
x509-parser = "0.16"
rcgen = "0.13"
instant-acme = "0.6"
rustls-pemfile = "2.1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
async-recursion = "1.1"
anyhow = "1.0"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
mime_guess = "2.0"
regex = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.0"
configparser = "3.0"
tempfile = "3.0"
rusqlite = { version = "0.31", features = ["bundled"] }

# PHP parsing
tree-sitter = "0.25"
tree-sitter-php = "0.24.2"

[dev-dependencies]
